Testing why on iOS home page doesn't work correctly

--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -7,15 +7,15 @@
   //section {
   //  scroll-snap-align: center;
   //}
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
+  //scroll-snap-type: y mandatory;
+  //overflow-y: scroll;
   height: 100%;
   .title {
     padding-top: 125px;
   }
   section {
     background: no-repeat top center fixed;
-    scroll-snap-align: center;
-    scroll-snap-stop: always;
+    //scroll-snap-align: center;
+    //scroll-snap-stop: always;
   }
 }
